# projectname

./: .gitignore  .nojekyll  README.md  _quarto-book.yml  _quarto.yml  header_extra.tex  index.html  index.qmd  requirements.txt  search.json  setup.cfg  skip-index.lua  workflow.html  workflow_notebooks.html
.devcontainer/: devcontainer.json
.github/workflows/: quarto-publish.yml
binder/: environment.yml
conda-build/: meta.yaml
manuscript/: _quarto.yml  index-preview.html  index.docx  index.embed.ipynb  index.html  index.out.ipynb  index.qmd  index.xml
manuscript/_tex/: index.tex
notebooks/: clear_notebook_outputs.sh  example.html  example.ipynb
reports/: example.html  example.qmd
site_libs/bootstrap/: bootstrap-02d7654a0ad9d4caed0fef654f8ad003.min.css  bootstrap-24e762f543317514c2929dfce5ec839f.min.css  bootstrap-42fe6902d9bc97920db93319f8ebf48e.min.css  bootstrap-ab767124c6a833fa2bbfbd801b8d2961.min.css  bootstrap.min.css
slides/: example.html  index.html  index.qmd
tables/: example.html
thesis/: _quarto.yml  before-body.tex  header_extra.tex  index-preview.html  index.docx  index.embed.ipynb  index.html  index.out.ipynb  index.qmd  index.xml  movesubcaptions.lua
thesis/_tex/: index.tex
